--- a/index.html
+++ b/index.html
@@ -132,5 +132,18 @@
         <p>&copy; 2023 Kuliner Nusantara</p>
     </footer>
     <script src="script.js"></script>
+    <script>
+  window.watsonAssistantChatOptions = {
+    integrationID: "f15410f5-1b48-44b0-8801-322d2dcfc765", // The ID of this integration.
+    region: "us-south", // The region your integration is hosted in.
+    serviceInstanceID: "b216ee1a-db53-4c61-819a-67d669d83897", // The ID of your service instance.
+    onLoad: function(instance) { instance.render(); }
+  };
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+    document.head.appendChild(t);
+  });
+</script>
 </body>
 </html>
