--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="Rawon.jph.jpg" alt="Rawon">
                 <h2>Rawon</h2>
                 <p>Makanan khas Jawa Timur</p>
-                <h3>Resep Rawon:</h3>
+<!--                 <h3>Resep Rawon:</h3> -->
 <!--                 <p>
                     Bahan Utama:
                     500 gram daging sapi (daging tetelan atau daging paha), potong-potong
@@ -43,7 +43,7 @@
                 <img src="rendang.jpg" alt="Rendang">
                 <h2>Rendang</h2>
                 <p>Makanan khas Minangkabau, Sumatera Barat</p>
-                <h3>Resep Rendang:</h3>
+<!--                 <h3>Resep Rendang:</h3> -->
 <!--                 <p>
                     Bahan Utama:
 
@@ -73,7 +73,7 @@
                 <img src="ayamTaliwang.jpg" alt="Ayam Taliwang">
                 <h2>Ayam Taliwang</h2>
                 <p>Makanan khas dati Nusa Tenggara Barat</p>
-                <h3>Resep Ayam Taliwang:</h3>
+<!--                 <h3>Resep Ayam Taliwang:</h3> -->
 
 <!--                      <p>
                         Bahan Utama:
@@ -101,7 +101,7 @@
                 <img src="gudeg.jpg" alt="Gudeg">
                 <h2>Gudeg</h2>
                 <p>Makanan khas Yogyakarta, Jawa Barat</p>
-                <h3>Resep Rendang:</h3>
+<!--                 <h3>Resep Rendang:</h3> -->
 <!--                 <p>
                     Bahan Utama:
 
